Added support for queries execution on RDS instance.
