# handler/aws_rds_monitoring_handler.go
@@ -21,3 +21,12 @@ func (rmh *RdsMonitoringHandler) GetV1Rdss(awsRegion string) (rdss models.RDSS, 
 
 	return
 }
+
+func (rmh *RdsMonitoringHandler) PostV1RdsQueries(queryExecAttrs *models.RdsQueriesExecAttr) error {
+	queries := make([]string, len(queryExecAttrs.Queries))
+	for _, query := range queryExecAttrs.Queries {
+		queries = append(queries, *query.Query)
+	}
+
+	return rmh.awsRdsClient.ExecuteQueries(*queryExecAttrs.Region, *queryExecAttrs.DbUser, *queryExecAttrs.DbName, *queryExecAttrs.DbEndpoint, *queryExecAttrs.IamArn, queries)
+}
